# magnet

./: .gitignore  app.py  flake.nix  pyproject.toml
application/: __main__.py  invoke.py
